# RoboCup-Carry-my-luggage

./: README.md
grasp_repos/: readme.md
grasp_repos/darknet_ros/darknet_ros/: CMakeLists.txt
grasp_repos/darknet_ros/darknet_ros/launch/: yolo_v3.launch
grasp_repos/gpd/: CMakeLists.txt
grasp_repos/gpd/cfg/: eigen_params.cfg  ros_eigen_params.cfg
grasp_repos/gpd_ros/launch/: gpd.launch
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/: README.md
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/hsrb_wrs_gazebo_launch/: package.xml
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/hsrb_wrs_gazebo_launch/launch/: edit_world.launch  hsrb_wrs_environment.launch  wrs_practice0_easy_tmc.launch  wrs_practice0_tmc.launch  wrs_practice1_easy_tmc.launch  wrs_practice1_tmc.launch  wrs_practice2_easy_tmc.launch  wrs_practice2_tmc.launch
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/hsrb_wrs_gazebo_launch/launch/include/: hsrb_wrs_common.xml  wrs_common.xml
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/hsrb_wrs_gazebo_launch/tests/: wrs_task1_tidy_orientation_items.sh
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/tmc_wrs_gazebo_world/: CMakeLists.txt  package.xml
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/tmc_wrs_gazebo_world/scripts/: spawn_objects
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/tmc_wrs_gazebo_world/worlds/: myworld.world  wrs2020.world  wrs2020.world.xacro  wrs2020_fast.world  wrs2020_fast_highrtf.world  wrs2020_fast_highrtf_knob.world  wrs2020_fast_knob.world  wrs2020_highrtf.world  wrs2020_highrtf_knob.world  wrs2020_knob.world
grasp_repos/hsrb_wrs_gazebo/hsrb_wrs_gazebo/tmc_wrs_gazebo_world/worlds/include/: physics.xacro
grasp_repos/object_detection/: CMakeLists.txt  package.xml
grasp_repos/object_detection/launch/: edit_world.launch  hsrb.launch  hsrb_mode.launch  hsrb_rviz.launch
grasp_repos/object_detection/scripts/: grasptopose.py  task3.py  test.py
grasp_repos/object_detection/src/: hsrb_head_controller.cpp
grasp_repos/object_detection/worlds/: test.world  wrs2020_coke.world
grasp_repos/object_detection_students/: README.md
grasp_repos/object_detection_students/src/object_detection_world/: CMakeLists.txt  package.xml
grasp_repos/object_detection_students/src/object_labeling/: CMakeLists.txt  package.xml
grasp_repos/object_detection_students/src/plane_segmentation/: CMakeLists.txt  package.xml
grasp_repos/object_detection_students/src/plane_segmentation/config/: config.rviz
hsrb_moveit/hsrb_moveit-v0.6.3-community/hsrb_moveit/: CHANGELOG.rst  package.xml
hsrb_moveit/hsrb_moveit-v0.6.3-community/hsrb_moveit_config/: CMakeLists.txt  package.xml
hsrb_moveit/hsrb_moveit-v0.6.3-community/hsrb_moveit_config/config/: joint_limits.yaml  sensors_xtion.yaml
hsrb_moveit/hsrb_moveit-v0.6.3-community/hsrb_moveit_config/launch/: hsrb_demo_with_controller.launch  move_group.launch  moveit.rviz
hsrb_moveit/hsrb_moveit-v0.6.3-community/hsrb_moveit_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
hsrb_task_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
hsrb_task_manager/config/: way_points.yaml  way_points_sim.yaml
hsrb_task_manager/doc/: data.md
hsrb_task_manager/launch/: get_object.sh  hsrb.launch  human_follow_env.sh  plane_segmentation.sh  run_gpd.sh  sim_env.launch  start_camera.sh  task_manager.launch
hsrb_task_manager/scripts/: MoveArm.py  ctrl_hsrb.py  localization_amcl2.py  move_test.py  state_machine.py  task_manager.py  task_manager_ex.py  test.py
hsrb_task_manager/worlds/: env.world  myworld.world
ics_gazebo/launch/: edit_world.launch
ics_gazebo/models/door/: door.sdf  model.config
ics_gazebo/worlds/: empty_fast.world
posture_recognize/: README.md
(+31 files in other folders)
